--- a/posts/c2.js.md
+++ b/posts/c2.js.md
@@ -4,3 +4,7 @@ published_at: 2024-04-17
 snippet: My sixth blog
 disable_html_sanitization: true
 ---
+
+<script scr="/scripts/c2.min.js"></script>
+
+<canvas id=c2 />
