--- a/posts/c2.js.md
+++ b/posts/c2.js.md
@@ -7,11 +7,10 @@ disable_html_sanitization: true
 
 <script scr="/scripts/c2.min.js"></script>
 
-<canvas id="c2"/>
+<canvas id="c2"></canvas>
 
 <script>
     //Created by Ren Yuan
-
 
 const renderer = new c2.Renderer(document.getElementById('c2'));
 resize();
