--- a/posts/c2.js.md
+++ b/posts/c2.js.md
@@ -7,7 +7,7 @@ disable_html_sanitization: true
 
 <script scr="/scripts/c2.min.js"></script>
 
-<canvas id="c2"></canvas>
+<canvas id="c2">
 
 <script>
     //Created by Ren Yuan
