--- a/posts/c2.js.md
+++ b/posts/c2.js.md
@@ -7,7 +7,9 @@ disable_html_sanitization: true
 
 <script scr="/scripts/c2.min.js"></script>
 
-<canvas id="c2">
+<canvas id="c2" />
+
+Code from [here](https://github.com/ren-yuan/c2.js/blob/main/examples/ConstForce.js)
 
 <script>
     //Created by Ren Yuan
