--- a/posts/c2.md
+++ b/posts/c2.md
@@ -1,5 +1,5 @@
 ---
-title: Sixth Session
+title: Sixthhh Session
 published_at: 2024-04-17
 snippet: My sixth blog
 disable_html_sanitization: true
