--- a/posts/c2.js.md
+++ b/posts/c2.js.md
@@ -6,7 +6,7 @@ disable_html_sanitization: true
 ---
 
 <!-- <script scr="/scripts/p5.min.js"></script>
-<script scr="/scripts/c2.js"></script>
+<script src="/scripts/c2.js"></script>
 
 Code from [link](https://github.com/ren-yuan/c2.js/blob/main/examples/ConstForce.js).
 
